# awGUI

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  example1.cpp
include/aw/gui/: CMakeLists.txt  gui.hpp  screen.hpp
include/aw/gui/renderers/: CMakeLists.txt  nanovgRenderer.hpp
include/aw/gui/widgets/: CMakeLists.txt  container.hpp  floatingContainer.hpp  screen.hpp  widget.hpp  window.hpp
src/aw/gui/: CMakeLists.txt  screen.cpp
src/aw/gui/renderers/: CMakeLists.txt  nanovgDrawHelper.hpp  nanovgRenderer.cpp
src/aw/gui/widgets/: CMakeLists.txt  widget.cpp
